--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,20 @@ body {
   padding: 0;
 }
 
+#cabecera {
+  background: cornflowerblue;
+  color: papayawhip;
+  margin: 0;
+  padding: 0.5em;
+  font-weight: bold;
+  box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.75);
+}
+#cabecera #tagline {
+  padding: 0 0 0 1em;
+  font-weight: normal;
+  font-size: 0.8em;
+}
+
 #container {
   width: 70%;
   padding: 1em;
