--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ body {
   margin: 0;
   padding: 0.5em;
   font-weight: bold;
-  box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.5);
 }
 #cabecera #tagline {
   padding: 0 0 0 1em;
@@ -23,7 +23,7 @@ body {
 
 #container {
   width: 70%;
-  padding: 1em;
+  padding: 0;
   text-align: left;
   border: 1px solid #ddd;
   margin: 0 auto;
@@ -31,4 +31,15 @@ body {
 
 #container h1 {
   font-size: 20px;
+}
+
+#post {
+  padding: 1em;
+}
+
+#footer {
+  background: #777;
+  color: white;
+  text-align: center;
+  padding: 0.5em;
 }
